# tabs.yaml
appId: com.duckduckgo.mobile.ios
tags:
    - release

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn:
    id: "searchEntry"
- inputText: "https://web-platform.test:9000/tools/runner/index.html"
- pressKey: Enter

- tapOn: "Start"
- assertVisible: "Download JSON results"
- tapOn: "Download JSON results"
- tapOn: "Save To Downloads"

- assertVisible: "Passed"
# Do something else to validate we downloaded
#- assertVisible:
#    childOf:
#        id: "output"
#    text: "1"

