# single_site-single_tab.yaml

appId: com.duckduckgo.mobile.ios
---

# Set up 
- clearState
- launchApp
- runFlow: 
    when: 
      visible: 
        text: "Let’s Do It!"
        index: 0
    file: ./shared/onboarding.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://www.search-company.site/"
- pressKey: Enter

# Manage onboarding
- runFlow:
    when:
      visible:
        text: "Got It"
        index: 0
    file: ./shared/onboarding_browsing.yaml

- assertVisible: "Search engine"

# Test SERP Ad
- scroll
- assertVisible: "[Ad 5] SERP Ad (heuristic)"
- tapOn: "[Ad 5] SERP Ad (heuristic)"
- assertVisible: "Publisher site"
- tapOn: 
    point: "6%,10%" # Shield icon. 
- assertVisible: 
    text: "View Tracker Companies" 
- tapOn: 
    text: "View Tracker Companies"
- assertVisible: 
    text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
- assertVisible: 
    text: "About our Web Tracking Protections"
- assertVisible: 
    text: ".*Ad Company"
- assertVisible: 
    text: "ad-company.site"
- tapOn: "Back"
- assertVisible: 
    text: "View Non-Tracker Companies"
- tapOn: 
    text: "View Non-Tracker Companies"
- assertVisible: 
    text: "The following third-party domains’ requests were loaded. If a company's requests are loaded, it can allow them to profile you, though our other web tracking protections still apply."
- assertVisible: 
    text: "About our Web Tracking Protections"
- assertVisible: 
    text: "The following domain’s requests were loaded because a publisher-company.site ad on DuckDuckGo was recently clicked. These requests help evaluate ad effectiveness. All ads on DuckDuckGo are non-profiling."
- assertVisible: 
    text: "How our search ads impact our protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "convert.ad-company.site"
- tapOn: "Back"
- tapOn: "Done"
- assertVisible:
    text: "Buy now"
- tapOn: 
    text: "Buy now"
- tapOn: 
    text: "High five!"
    optional: true
- assertVisible:
    text: "Checkout"
- tapOn: 
    point: "6%,10%" # Shield icon. 
- assertVisible:
    text: "View Tracker Companies"
- tapOn:
    text: "View Tracker Companies"
- assertVisible:
    text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "ad-company.site"
- tapOn: "Back"
- assertVisible:
    text: "View Non-Tracker Companies"
- tapOn:
    text: "View Non-Tracker Companies"
- assertVisible:
    text: "The following third-party domains’ requests were loaded. If a company's requests are loaded, it can allow them to profile you, though our other web tracking protections still apply."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: "The following domain’s requests were loaded because a publisher-company.site ad on DuckDuckGo was recently clicked. These requests help evaluate ad effectiveness. All ads on DuckDuckGo are non-profiling."
- assertVisible:
    text: "How our search ads impact our protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "convert.ad-company.site"
- tapOn: "Back"
- tapOn: "Done"
- assertVisible: 
    text: "Pay"
- tapOn: "Pay"
- assertVisible:
    text: ".*Order complete.*"
- tapOn: 
    point: "6%,10%" # Shield icon. 
- assertVisible:
    text: "View Tracker Companies"
- tapOn:
    text: "View Tracker Companies"
- assertVisible:
    text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "ad-company.site"
- tapOn: "Back"
- assertVisible:
    text: "View Non-Tracker Companies"
- tapOn:
    text: "View Non-Tracker Companies"
- assertVisible:
    text: "The following third-party domains’ requests were loaded. If a company's requests are loaded, it can allow them to profile you, though our other web tracking protections still apply."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: "The following domain’s requests were loaded because a publisher-company.site ad on DuckDuckGo was recently clicked. These requests help evaluate ad effectiveness. All ads on DuckDuckGo are non-profiling."
- assertVisible:
    text: "How our search ads impact our protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "convert.ad-company.site"
