appId: com.duckduckgo.mobile.ios
---

- tapOn: Settings
- scrollUntilVisible:
    element: Passwords
- tapOn: Passwords
- tapOn: Passcode field
- inputText: "0000"
- pressKey: Enter
- tapOn: My Personal Website 
- tapOn: Delete Password
- tapOn: Delete Password
- tapOn: Settings
- tapOn: Done
