# onboarding.yaml

appId: com.duckduckgo.mobile.ios
---

- tapOn:
    id: "searchEntry"
#- longPressOn:
#    id: "searchEntry"
#- tapOn: 'Select All'
- eraseText: 1000
- inputText: ${URL}
- pressKey: Enter