appId: com.duckduckgo.mobile.ios
---

- assertVisible: Sync & Backup
- scroll
- tapOn: Turn Off and Delete Server Data...
- assertVisible: Delete Server Data?
- tapOn: Delete Server Data
- assertVisible: Begin Syncing