appId: com.duckduckgo.mobile.ios
---

- assertVisible: Begin Syncing
- tapOn: Sync with Another Device
- inputText: "0000"
- pressKey: Enter
- assertVisible: Scan QR Code
- runFlow:
    when:
      visible: Allows you to upload photographs and videos
    commands:
        - tapOn: "Allow"
- tapOn: Manually Enter Code
- tapOn: Paste
- assertVisible: Save Recovery Code
- tapOn: Next
- assertVisible: Your Data is Synced!
- tapOn: Done
- assertVisible: Sync Enabled
- assertVisible: 
    id: "device"
    index: 1