appId: com.duckduckgo.mobile.ios
tags:
    - sync
name: 01_create_account

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Set Internal User
- tapOn: Browsing menu
- tapOn: Settings
- runFlow:
    file: ../shared/set_internal_user_from_settings.yaml

# Create account
- runFlow:
    file: ../shared/sync_create.yaml


# Clean up
- assertVisible: Sync & Backup
- runFlow:
    file: ../shared/sync_delete.yaml
