appId: com.duckduckgo.mobile.ios
tags:
    - sync

---

# Clear and launch
- clearState
- launchApp

# Run onboarding Flow
- runFlow: 
    when: 
      visible: 
        text: "Let’s Do It!"
        index: 0
    file: ../shared/onboarding.yaml

# Set Internal User
- tapOn: Settings
- runFlow:
    file: ../shared/set_internal_user_from_settings.yaml

# Create account
- runFlow:
    file: ../shared/sync_create.yaml

# Remove account
- runFlow:
    file: ../shared/sync_delete.yaml

# Try to login and check for error
- assertVisible: Begin Syncing
- tapOn: Sync with Another Device
- inputText: "0000"
- pressKey: Enter
- assertVisible: Scan QR Code
- tapOn: Manually Enter Code
- tapOn: Paste
- assertVisible: Sync & Backup Error
- tapOn: OK
